@@ -74,7 +74,7 @@ void CIMInstanceRep::resolve(
     CIMConstClass cimClass =
 	context->lookupClass(nameSpace, _reference.getClassName());
 
-    if (!cimClass)
+    if (cimClass.isNull())
 	throw PEGASUS_CIM_EXCEPTION(CIM_ERR_INVALID_CLASS, _reference.getClassName());
 
     cimClassOut = cimClass;
